--- a/app/javascript/stylesheets/_social_proof_widget.scss
+++ b/app/javascript/stylesheets/_social_proof_widget.scss
@@ -1,5 +1,14 @@
 // Social Proof Widget Styles
 
+.social-proof-widget-preview {
+  border: 1px solid rgb(var(--parent-color, 0 0 0) / var(--border-alpha, 0.2));
+  border-radius: var(--border-radius-2, 8px);
+  padding: var(--spacer-4, 16px);
+  background: white;
+  margin-top: var(--spacer-4, 16px);
+  min-height: 200px;
+}
+
 .social-proof-widget-container {
   position: fixed;
   bottom: 20px;
