--- a/app/views/checkout/social_proof_widgets/index.html.erb
+++ b/app/views/checkout/social_proof_widgets/index.html.erb
@@ -1,2 +1,2 @@
 <%= load_pack("checkout_dashboard") %>
-<%= react_component "SocialProofWidgetsPage", props: @presenter.social_proof_widgets_props, prerender: false %>
+<%= react_component "SocialProofWidgetsPage", props: @presenter.social_proof_widgets_props, prerender: true %>
